# agentic-titan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  seed.yaml
.ci/: allow_secret_baseline.txt  check_allow_secret_usage.py  check_core_boundary_manifest.py  check_mypy_quarantine.py  completion_status.md  core_import_boundary_directories.txt  core_import_boundary_files.txt  current_allow_secret_report.txt  current_pytest.txt  current_pytest_warnings.txt  deploy_smoke_compose.txt  deploy_smoke_k3s.txt  deploy_smoke_metrics_sample.txt  mypy_debt_quarantine.md  test_triage.md  typecheck_core_targets.txt  update_completion_status.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  governance-audit.yml
.meta/: dependencies.json
.serena/: project.yml
.stress-results/: stress_chaos_20260119_111721.json  stress_swarm_20260119_111208.json  stress_swarm_20260119_111453.json  stress_swarm_20260119_111601.json
absorb-alchemize/: aiark-v11.html  an-architectural-synthesis-a-modular-multi-agent.md  expand_AI_inquiry.jsx  expand_AI_inquiry.txt
adapters/: __init__.py  base.py  router.py
agents/: __init__.py  persona_coordination.py  personas.py
agents/archetypes/: __init__.py  coder.py  orchestrator.py  paper2code.py  researcher.py  reviewer.py
agents/framework/: __init__.py  base_agent.py  errors.py  resilience.py  tool_agent.py
agents/learning/: __init__.py  entity_extractor.py  episodic.py  learner.py
dashboard/: __init__.py  app.py  models.py
dashboard/components/: __init__.py  conversations.py  diff.py  filebrowser.py
dashboard/templates/: agents.html  base.html  index.html  models.html  topology.html
demos/: __init__.py  end_to_end_demo.py
deploy/: Dockerfile.api  Dockerfile.worker  compose.yaml  prometheus.yml
deploy/k3s/: api-deployment.yaml  celery-worker.yaml  kustomization.yaml  network-policies.yaml  postgres.yaml  ray-cluster.yaml  rbac.yaml  resource-quotas.yaml
docs/: api.md  ci-governance-ownership.md  ci-quality-gates.md  claude-code-setup.md  deploy-smoke-evidence.md  deploy-smoke-runbook.md  release-approver-signoff.md  release-closure-checklist.md  release-evidence-template.md  release-notes-omega-closure.md
docs/source-materials/: PROVENANCE.yaml
examples/: claude_desktop_config.json
hive/: __init__.py  analyzer.py  criticality.py  events.py  fission_fusion.py  information_center.py  learning.py  memory.py  neighborhood.py  stigmergy.py  topology.py
hive/decision/: __init__.py  consensus.py  voting.py
hive/migration/: __init__.py  manager.py  runtime.py  state.py
mcp/: README.md  __init__.py  server.py
plans/: chaos_test.md
plans/evaluation-to-growth/: checklist.md
runtime/: __init__.py  base.py  docker.py  local.py  openfaas.py  sandbox.py  selector.py
runtime/firecracker/: network.py
specs/: coder.titan.yaml  orchestrator.titan.yaml  researcher.titan.yaml  reviewer.titan.yaml
tests/: test_decision.py  test_llm_live.py  test_mcp_server.py  test_migration.py
tests/analysis/: __init__.py  test_contradictions.py  test_dialectic.py
tests/api/: __init__.py  conftest.py  test_admin.py  test_models_routes.py  test_rate_limit.py
tests/archetypes/: __init__.py  conftest.py  test_biological.py  test_core_agents.py  test_digital.py  test_governance.py  test_philosophical.py  test_professional.py
tests/auth/: __init__.py  conftest.py  test_api_keys.py  test_jwt.py  test_middleware.py
tests/batch/: __init__.py  test_orchestrator.py  test_worker.py
tests/chaos/: test_fission_recovery.py
tests/evaluation/: __init__.py  test_quality.py
tests/integration/: test_import_boundaries.py
tests/learning/: __init__.py  test_pipeline.py
tests/prompts/: __init__.py  bank.py  test_auto_prompt.py  test_examples.py  test_metrics.py  test_token_optimizer.py
tests/ray/: __init__.py  test_ray_integration.py
tests/test_hive/: __init__.py  conftest.py  test_assembly_complete.py  test_criticality.py  test_fission_fusion.py  test_information_center.py  test_multi_scale_neighbors.py  test_war_machine_complete.py
tests/workflows/: test_inquiry_dag.py  test_inquiry_engine.py
titan/: __init__.py  cli.py  metrics.py  spec.py
titan/analysis/: __init__.py  contradictions.py  detector.py  dialectic.py
titan/api/: __init__.py  admin_routes.py  analysis_routes.py  auth_routes.py  batch_routes.py  batch_ws.py  inquiry_routes.py  inquiry_ws.py  knowledge_routes.py  (+3 more)
tools/: __init__.py  base.py  builtin.py  executor.py  pdf.py  rag.py  search.py  semantic_code.py
(+80 files in other folders)
