[project]
name = "agentic-titan"
version = "0.1.0"
description = "Polymorphic Agent Swarm Architecture - Model-agnostic, self-organizing multi-agent system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Agentic Titan Team" }
]
keywords = ["agents", "llm", "multi-agent", "swarm", "orchestration"]

dependencies = [
    "redis>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
local-llm = [
    "ollama>=0.1.0",
]
vector-db = [
    "chromadb>=0.5.0",
]
messaging = [
    "nats-py>=2.6.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]
metrics = [
    "prometheus-client>=0.19.0",
]
stress = [
    "psutil>=5.9.0",
]
# Phase 2: Document tools
documents = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "pypdf>=4.0.0",
]
# Phase 4: Langfuse observability
langfuse = [
    "langfuse>=2.0.0",
]
# Phase 4: Language Server Protocol for semantic code
lsp = [
    "pygls>=1.0.0",
]
# Phase 4: SQL-native memory (Memori pattern)
memori = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]
# Phase 12: PostgreSQL persistence
postgres = [
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
]
# Phase 12: Evaluation and testing
evaluation = [
    "deepeval>=0.21.0",
]
# Phase 14: Ray Serve compute backend
ray = [
    "ray[serve]>=2.9.0",
]
# Phase 13: Celery batch processing
celery = [
    "celery[redis]>=5.3.0",
]
# Phase 15: Authentication
auth = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.9",
]
# Phase 15: Rate limiting
ratelimit = [
    "slowapi>=0.1.9",
]
all = [
    "agentic-titan[local-llm,vector-db,messaging,embeddings,dashboard,metrics,stress,documents,langfuse,lsp,memori,postgres,evaluation,ray,celery,auth,ratelimit]",
]

[project.scripts]
titan = "titan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["titan", "agents", "hive", "adapters", "runtime", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
